--- a/work/planning-and-urban-design-website.html
+++ b/work/planning-and-urban-design-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 05:42:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 18:09:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a57cdc01f0f751ac5877b" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -57,14 +57,14 @@
           <script type="application/json" class="w-json">{
   "items": [
     {
-      "type": "image",
       "_id": "614a5878296cc1c7a4e1f8a8",
-      "fileName": "614a5878296cc1c7a4e1f8a8_Screen Shot 2021-09-21 at 5.04.08 PM.png",
       "origFileName": "Screen Shot 2021-09-21 at 5.04.08 PM.png",
-      "width": 2498,
-      "height": 1402,
+      "fileName": "Screen Shot 2021-09-21 at 5.04.08 PM.png",
       "fileSize": 587499,
-      "url": "../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png"
+      "height": 1402,
+      "url": "../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png",
+      "width": 2498,
+      "type": "image"
     }
   ],
   "group": "PUD"
@@ -75,15 +75,14 @@
           <script type="application/json" class="w-json">{
   "items": [
     {
-      "width": 3584,
-      "caption": "",
-      "height": 4020,
-      "fileName": "PUD Client Mockups.jpg",
-      "origFileName": "PUD Client Mockups.jpg",
-      "url": "../images/PUD-Client-Mockups.jpg",
       "_id": "619829b76e036a8121248715",
-      "type": "image",
-      "fileSize": 456700
+      "origFileName": "PUD Client Mockups.jpg",
+      "fileName": "PUD Client Mockups.jpg",
+      "fileSize": 456700,
+      "height": 4020,
+      "url": "../images/PUD-Client-Mockups.jpg",
+      "width": 3584,
+      "type": "image"
     }
   ],
   "group": "PUD"
@@ -94,15 +93,14 @@
           <script type="application/json" class="w-json">{
   "items": [
     {
-      "width": 3806,
-      "caption": "",
-      "height": 2326,
-      "fileName": "614a5a3b447f92325d5d26d9_Screen Shot 2021-09-21 at 5.18.18 PM.png",
-      "origFileName": "Screen Shot 2021-09-21 at 5.18.18 PM.png",
-      "url": "../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png",
       "_id": "614a5a3b447f92325d5d26d9",
-      "type": "image",
-      "fileSize": 3450345
+      "origFileName": "Screen Shot 2021-09-21 at 5.18.18 PM.png",
+      "fileName": "Screen Shot 2021-09-21 at 5.18.18 PM.png",
+      "fileSize": 3450345,
+      "height": 2326,
+      "url": "../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png",
+      "width": 3806,
+      "type": "image"
     }
   ],
   "group": "PUD"
@@ -113,15 +111,14 @@
           <script type="application/json" class="w-json">{
   "items": [
     {
-      "width": 1992,
-      "caption": "",
-      "height": 1928,
-      "fileName": "614a588b99e1a692b24b0984_Screen Shot 2021-09-21 at 5.06.55 PM.png",
-      "origFileName": "Screen Shot 2021-09-21 at 5.06.55 PM.png",
-      "url": "../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png",
       "_id": "614a588b99e1a692b24b0984",
-      "type": "image",
-      "fileSize": 2183815
+      "origFileName": "Screen Shot 2021-09-21 at 5.06.55 PM.png",
+      "fileName": "Screen Shot 2021-09-21 at 5.06.55 PM.png",
+      "fileSize": 2183815,
+      "height": 1928,
+      "url": "../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png",
+      "width": 1992,
+      "type": "image"
     }
   ],
   "group": "PUD"
