--- a/work/resilient-dallas-website-design.html
+++ b/work/resilient-dallas-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 05:42:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 18:09:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6233296cc1cbf9e25fc8" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -54,108 +54,37 @@
         </div>
         <a href="#" class="w-inline-block w-lightbox"><img src="../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7226px) 46vw, 3324px" srcset="../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png 3324w" alt="A preview of how to read the document provided from the client" class="image-2">
           <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 3324,
-      "caption": "",
-      "height": 2204,
-      "fileName": "614a63470d8f5875fdb59780_Screen Shot 2021-09-21 at 5.56.28 PM.png",
-      "origFileName": "Screen Shot 2021-09-21 at 5.56.28 PM.png",
-      "url": "../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png",
-      "_id": "614a63470d8f5875fdb59780",
-      "type": "image",
-      "fileSize": 2847258
-    }
-  ],
+  "items": [],
   "group": "Resilient"
 }</script>
         </a>
         <a href="#" class="w-inline-block w-lightbox"><img src="../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7226px) 46vw, 3324px" srcset="../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png 3324w" alt="A preview of the first goal initiatives, actions and resources" class="image-2">
           <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 3324,
-      "caption": "",
-      "height": 2204,
-      "fileName": "614a635b7d60766f960369e6_Screen Shot 2021-09-21 at 5.56.55 PM.png",
-      "origFileName": "Screen Shot 2021-09-21 at 5.56.55 PM.png",
-      "url": "../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png",
-      "_id": "614a635b7d60766f960369e6",
-      "type": "image",
-      "fileSize": 2945287
-    }
-  ],
+  "items": [],
   "group": "Resilient"
 }</script>
         </a>
-        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 5839px) 46vw, 2686px" srcset="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 500w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 800w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 1080w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 1600w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 2000w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 2686w" alt="A preview of the first goal initiatives, actions and resources" class="image-2">
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 5839px) 46vw, 2686px" srcset="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-500.png 500w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-800.png 800w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-1080.png 1080w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-1600.png 1600w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-2000.png 2000w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 2686w" alt="A preview of the first goal initiatives, actions and resources" class="image-2">
           <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "61a84ccbe6f2a434a1e5490d",
-      "fileName": "Resilient Dallas Wireframses and Initial Mockups.png",
-      "origFileName": "Resilient Dallas Wireframses and Initial Mockups.png",
-      "width": 2686,
-      "height": 1868,
-      "fileSize": 919711,
-      "url": "../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png"
-    }
-  ],
+  "items": [],
   "group": "Resilient"
 }</script>
         </a>
         <a href="#" class="w-inline-block w-lightbox"><img src="../images/Homepage---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Homepage---Desktop-p-500.jpeg 500w, ../images/Homepage---Desktop-p-800.jpeg 800w, ../images/Homepage---Desktop-p-1080.jpeg 1080w, ../images/Homepage---Desktop.jpg 1440w" alt="A mockup of the final landing page" class="image-2">
           <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 1440,
-      "caption": "",
-      "height": 2484,
-      "fileName": "614a6370dba87179276bd143_Homepage - Desktop.jpg",
-      "origFileName": "Homepage - Desktop.jpg",
-      "url": "../images/Homepage---Desktop.jpg",
-      "_id": "614a6370dba87179276bd143",
-      "type": "image",
-      "fileSize": 1141469
-    }
-  ],
+  "items": [],
   "group": "Resilient"
 }</script>
         </a>
         <a href="#" class="w-inline-block w-lightbox"><img src="../images/Goals-with-Top-All-Goals-Data.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Goals-with-Top-All-Goals-Data-p-500.jpeg 500w, ../images/Goals-with-Top-All-Goals-Data-p-800.jpeg 800w, ../images/Goals-with-Top-All-Goals-Data-p-1080.jpeg 1080w, ../images/Goals-with-Top-All-Goals-Data.jpg 1440w" alt="A mockup of the goals page which lists each goal with a status and quick description" class="image-2">
           <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 1440,
-      "caption": "",
-      "height": 3492,
-      "fileName": "614a6381937d200a5a46a580_Goals with Top All Goals Data.jpg",
-      "origFileName": "Goals with Top All Goals Data.jpg",
-      "url": "../images/Goals-with-Top-All-Goals-Data.jpg",
-      "_id": "614a6381937d200a5a46a580",
-      "type": "image",
-      "fileSize": 990783
-    }
-  ],
+  "items": [],
   "group": "Resilient"
 }</script>
         </a>
         <a href="#" class="w-inline-block w-lightbox"><img src="../images/Initiative-and-Action-Template---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Initiative-and-Action-Template---Desktop-p-500.jpeg 500w, ../images/Initiative-and-Action-Template---Desktop-p-800.jpeg 800w, ../images/Initiative-and-Action-Template---Desktop-p-1080.jpeg 1080w, ../images/Initiative-and-Action-Template---Desktop.jpg 1440w" alt="A mockup of the goals details template that includes all of its initiatives, actions and resources" class="image-2">
           <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 1440,
-      "caption": "",
-      "height": 2321,
-      "fileName": "614a639599e1a6fe104b3c56_Initiative and Action Template - Desktop.jpg",
-      "origFileName": "Initiative and Action Template - Desktop.jpg",
-      "url": "../images/Initiative-and-Action-Template---Desktop.jpg",
-      "_id": "614a639599e1a6fe104b3c56",
-      "type": "image",
-      "fileSize": 717594
-    }
-  ],
+  "items": [],
   "group": "Resilient"
 }</script>
         </a>
