--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 18:09:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 22:11:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -163,12 +163,12 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="http://personalpest.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-personal-pest"></div>
+      <a href="http://approvedtoprint.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 work-approved-to-print"></div>
         <div class="div-block-7">
           <div class="div-block-5">
-            <h4 class="work-heading">UX/UI Design &amp; Development</h4>
-            <p class="paragraph-2">Personal Pest Control</p>
+            <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
+            <p class="paragraph-2">Approved to Print</p>
           </div>
           <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
         </div>
@@ -193,12 +193,12 @@
           <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="http://approvedtoprint.com" target="_blank" class="work-link-block w-inline-block">
-        <div class="work1 work-approved-to-print"></div>
+      <a href="http://personalpest.com" target="_blank" class="work-link-block w-inline-block">
+        <div class="work1 work-personal-pest"></div>
         <div class="div-block-7">
           <div class="div-block-5">
-            <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
-            <p class="paragraph-2">Approved to Print</p>
+            <h4 class="work-heading">UX/UI Design &amp; Development</h4>
+            <p class="paragraph-2">Personal Pest Control</p>
           </div>
           <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
         </div>
