--- a/work/dallas-city-hall-menu-redesign.html
+++ b/work/dallas-city-hall-menu-redesign.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 18:09:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 22:11:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61a8fe808eb9151a5dd9a566" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -53,7 +53,7 @@
           </a>
         </div>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>Old Mega Menu Design</h5><img src="../images/DCH-megamenu.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-megamenu.jpg 500w, ../images/DCH-megamenu.jpg 800w, ../images/DCH-megamenu.jpg 1043w" alt="PUD Website Outline of Information Architecture" class="image-2">
+          <h5>Old Mega Menu Design</h5><img src="../images/DCH-megamenu.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-megamenu-p-500.jpeg 500w, ../images/DCH-megamenu-p-800.jpeg 800w, ../images/DCH-megamenu.jpg 1043w" alt="PUD Website Outline of Information Architecture" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -81,7 +81,7 @@
 }</script>
         </a>
         <a href="../documents/DCH-personas-userflows.pdf" target="_blank" class="file-link w-inline-block">
-          <h5>Personas</h5><img src="../images/DCH-Personas.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3476px) 42vw, 1460px" srcset="../images/DCH-Personas.png 500w, ../images/DCH-Personas.png 800w, ../images/DCH-Personas.png 1080w, ../images/DCH-Personas.png 1460w" alt="PUD Website Outline of Information Architecture" class="image-2">
+          <h5>Personas</h5><img src="../images/DCH-Personas.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3476px) 42vw, 1460px" srcset="../images/DCH-Personas-p-500.png 500w, ../images/DCH-Personas-p-800.png 800w, ../images/DCH-Personas-p-1080.png 1080w, ../images/DCH-Personas.png 1460w" alt="PUD Website Outline of Information Architecture" class="image-2">
         </a>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
           <h5>Scenarios</h5><img src="../images/DCH-Scenarios.jpg" loading="lazy" alt="PUD Website Outline of Information Architecture" class="image-2">
@@ -102,7 +102,7 @@
 }</script>
         </a>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>Concepts</h5><img src="../images/DCH-finalboard-3versions.JPG" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-finalboard-3versions.JPG 500w, ../images/DCH-finalboard-3versions.JPG 1080w, ../images/DCH-finalboard-3versions.JPG 1592w" alt="PUD Website Outline of Information Architecture" class="image-2">
+          <h5>Concepts</h5><img src="../images/DCH-finalboard-3versions.JPG" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-finalboard-3versions-p-500.jpeg 500w, ../images/DCH-finalboard-3versions-p-1080.jpeg 1080w, ../images/DCH-finalboard-3versions.JPG 1592w" alt="PUD Website Outline of Information Architecture" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -119,7 +119,7 @@
   "group": "DCH Menu"
 }</script>
         </a>
-        <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="../images/DCH-Concept2-pg2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-Concept2-pg2.jpg 500w, ../images/DCH-Concept2-pg2.jpg 800w, ../images/DCH-Concept2-pg2.jpg 1080w, ../images/DCH-Concept2-pg2.jpg 1096w" alt="PUD Website Outline of Information Architecture" class="image-2">
+        <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="../images/DCH-Concept2-pg2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-Concept2-pg2-p-500.jpeg 500w, ../images/DCH-Concept2-pg2-p-800.jpeg 800w, ../images/DCH-Concept2-pg2-p-1080.jpeg 1080w, ../images/DCH-Concept2-pg2.jpg 1096w" alt="PUD Website Outline of Information Architecture" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -157,13 +157,13 @@
 }</script>
         </a>
         <a href="../documents/DCH-UsabilityTest-Session1-FINAL.pdf" target="_blank" class="file-link w-inline-block">
-          <h5>Usability Test Session</h5><img src="../images/DCH-Usability-Test.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 4409px) 44vw, 1940px" srcset="../images/DCH-Usability-Test.png 500w, ../images/DCH-Usability-Test.png 800w, ../images/DCH-Usability-Test.png 1080w, ../images/DCH-Usability-Test.png 1600w, ../images/DCH-Usability-Test.png 1940w" alt="PUD Website Outline of Information Architecture" class="image-2">
+          <h5>Usability Test Session</h5><img src="../images/DCH-Usability-Test.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 4409px) 44vw, 1940px" srcset="../images/DCH-Usability-Test-p-500.png 500w, ../images/DCH-Usability-Test-p-800.png 800w, ../images/DCH-Usability-Test-p-1080.png 1080w, ../images/DCH-Usability-Test-p-1600.png 1600w, ../images/DCH-Usability-Test.png 1940w" alt="PUD Website Outline of Information Architecture" class="image-2">
         </a>
         <a href="../documents/DCH-Redesign-FindingsReport-HeroMenuSession-LR.pdf" target="_blank" class="file-link w-inline-block">
-          <h5>Redesign Findings Report</h5><img src="../images/DCH-Redesign-Findings-Report-Hero-Menu.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 4409px) 44vw, 1940px" srcset="../images/DCH-Redesign-Findings-Report-Hero-Menu.png 500w, ../images/DCH-Redesign-Findings-Report-Hero-Menu.png 800w, ../images/DCH-Redesign-Findings-Report-Hero-Menu.png 1080w, ../images/DCH-Redesign-Findings-Report-Hero-Menu.png 1600w, ../images/DCH-Redesign-Findings-Report-Hero-Menu.png 1940w" alt="PUD Website Outline of Information Architecture" class="image-2">
+          <h5>Redesign Findings Report</h5><img src="../images/DCH-Redesign-Findings-Report-Hero-Menu.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 4409px) 44vw, 1940px" srcset="../images/DCH-Redesign-Findings-Report-Hero-Menu-p-500.png 500w, ../images/DCH-Redesign-Findings-Report-Hero-Menu-p-800.png 800w, ../images/DCH-Redesign-Findings-Report-Hero-Menu-p-1080.png 1080w, ../images/DCH-Redesign-Findings-Report-Hero-Menu-p-1600.png 1600w, ../images/DCH-Redesign-Findings-Report-Hero-Menu.png 1940w" alt="PUD Website Outline of Information Architecture" class="image-2">
         </a>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>Final Menu Redesign</h5><img src="../images/DCH-Redesigned-Menu.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-Redesigned-Menu.png 500w, ../images/DCH-Redesigned-Menu.png 800w, ../images/DCH-Redesigned-Menu.png 1080w, ../images/DCH-Redesigned-Menu.png 1600w, ../images/DCH-Redesigned-Menu.png 2000w, ../images/DCH-Redesigned-Menu.png 2600w, ../images/DCH-Redesigned-Menu.png 3200w, ../images/DCH-Redesigned-Menu.png 3348w" alt="PUD Website Outline of Information Architecture" class="image-2">
+          <h5>Final Menu Redesign</h5><img src="../images/DCH-Redesigned-Menu.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/DCH-Redesigned-Menu-p-500.png 500w, ../images/DCH-Redesigned-Menu-p-800.png 800w, ../images/DCH-Redesigned-Menu-p-1080.png 1080w, ../images/DCH-Redesigned-Menu-p-1600.png 1600w, ../images/DCH-Redesigned-Menu-p-2000.png 2000w, ../images/DCH-Redesigned-Menu-p-2600.png 2600w, ../images/DCH-Redesigned-Menu-p-3200.png 3200w, ../images/DCH-Redesigned-Menu.png 3348w" alt="PUD Website Outline of Information Architecture" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
