--- a/work/child-perfume-package-design.html
+++ b/work/child-perfume-package-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 22:11:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Dec 03 2021 23:00:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6cafc2811053cf8a9629" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
           <h4>Package Design</h4>
         </div>
         <div class="stick-content-paragraph-div">
-          <p>Worked closely with Susan Owens. She was the owner and creator of Child Perfume. I help her design many different print materials as well as helped to maintain her former website.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Illustrator &amp; Photoshop<br><strong>Year:</strong> 2010</p>
+          <p>Worked closely with Susan Owens. She was the owner and creator of Child Perfume. I designed many different print materials as well as helped to maintain her former website.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Illustrator &amp; Photoshop<br><strong>Year:</strong> 2010</p>
         </div>
       </div>
       <div class="image-div"><img src="../images/child-perfume-packaging-p-900x695.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/child-perfume-packaging-p-900x695-p-500.jpeg 500w, ../images/child-perfume-packaging-p-900x695-p-800.jpeg 800w, ../images/child-perfume-packaging-p-900x695.jpg 900w" alt="" class="image-2"></div>
