--- a/work/responsive-city-of-dallas-website-framework.html
+++ b/work/responsive-city-of-dallas-website-framework.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 22:11:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Dec 03 2021 23:00:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a64402f7c6c70ad312717" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,13 @@
           <h4>Responsive Design</h4>
         </div>
         <div class="stick-content-paragraph-div">
-          <p>In this project for Dallas City Hall, we took the current website and converted it into a responsive grid for a better user experience on tablet and mobile devices. We used the Bootstrap framework. My responsibilities on this project which was a team effort included:<br><br>• Design work of the responsive global and sub menus with web accessibility standard guidance <br>• Updating the hero image<br>• Assisting with the front end development of the homepage<br><br><strong>Role:</strong> UX/UI Designer &amp; Front End Assist<br><strong>Programs:</strong> Adobe XD &amp; Sharepoint Designer<br><strong>Year:</strong> 2017</p>
+          <p>In this project for Dallas City Hall, we took the current website and converted it into a responsive grid for a better user experience on tablet and mobile devices. We used the Bootstrap framework. My responsibilities on this project which was a team effort included:</p>
+          <ul role="list" class="list">
+            <li class="list-item">Design work of the responsive global and sub menus with web accessibility standard guidance </li>
+            <li class="list-item">Updating the hero image</li>
+            <li class="list-item">Assisting with the front end development of the homepage</li>
+          </ul>
+          <p>‍<strong>Role:</strong> UX/UI Designer &amp; Front End Assist<br><strong>Programs:</strong> Adobe XD &amp; Sharepoint Designer<br><strong>Year:</strong> 2017</p>
         </div>
       </div>
       <div class="image-div">
