--- a/work/la-creme-box-art-design.html
+++ b/work/la-creme-box-art-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 22:11:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Dec 03 2021 23:00:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6e5443771a20df556ab2" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
           <h4>Package Design</h4>
         </div>
         <div class="stick-content-paragraph-div">
-          <p>Worked closely with the owner of La Creme. I help them design many different print materials throughout my tenure at JPT Graphics.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Illustrator &amp; Photoshop<br><strong>Year:</strong> 2012-2014</p>
+          <p>Worked closely with the owner of La Creme. I helped them design many different print materials throughout my tenure at JPT Graphics.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Illustrator &amp; Photoshop<br><strong>Year:</strong> 2012-2014</p>
         </div>
       </div>
       <div class="image-div"><img src="../images/la_creme_box_art_p.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/la_creme_box_art_p-p-500.jpeg 500w, ../images/la_creme_box_art_p-p-800.jpeg 800w, ../images/la_creme_box_art_p-p-1080.jpeg 1080w, ../images/la_creme_box_art_p.jpg 1200w" alt="" class="image-2"></div>
