--- a/work/la-creme-tag-design.html
+++ b/work/la-creme-tag-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 22:11:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Dec 03 2021 23:00:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a7020e588fa343b785ef7" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
           <h4>Tag Design</h4>
         </div>
         <div class="stick-content-paragraph-div">
-          <p>Worked closely with the owner of La Creme. I help them design many different print materials throughout my tenure at JPT Graphics. Each tag image design was edited in Photoshop using stock images to represent the blend/flavor of the teas.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Photoshop &amp; Illustrator<br><strong>Year:</strong> 2012-2014</p>
+          <p>Worked closely with the owner of La Creme. I helped them design many different print materials throughout my tenure at JPT Graphics. Each tag image design was edited in Photoshop using stock images to represent the blend/flavor of the teas.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Photoshop &amp; Illustrator<br><strong>Year:</strong> 2012-2014</p>
         </div>
       </div>
       <div class="image-div"><img src="../images/la-creme-labels-1200x900.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/la-creme-labels-1200x900-p-800.jpeg 800w, ../images/la-creme-labels-1200x900-p-1080.jpeg 1080w, ../images/la-creme-labels-1200x900.jpg 1200w" alt="" class="image-2"></div>
