--- a/work/city-council-attendance-website-design.html
+++ b/work/city-council-attendance-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 08 2022 20:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Feb 08 2022 20:26:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6202b00806ae5bc0581a2986" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -42,8 +42,8 @@
         <h4>UI Design</h4>
         <p>Create an attendance tracker for City Council members and Mayor to help in the City&#x27;s overall transparency efforts.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD<br><strong>Year:</strong> 2018-2019<br></p>
       </div>
-      <div class="resources-div"><img src="../images/City-Council-Attendance-Responsive-Design.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/City-Council-Attendance-Responsive-Design.jpg 800w, ../images/City-Council-Attendance-Responsive-Design.jpg 1600w, ../images/City-Council-Attendance-Responsive-Design.jpg 2000w, ../images/City-Council-Attendance-Responsive-Design.jpg 2600w, ../images/City-Council-Attendance-Responsive-Design.jpg 2800w" alt="A mockup of the goals details template that includes all of its initiatives, actions and resources" class="image-2">
-        <a href="#" class="project-button w-button">View the City Council Attendance Website</a>
+      <div class="resources-div"><img src="../images/City-Council-Attendance-Responsive-Design.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/City-Council-Attendance-Responsive-Design-p-800.jpeg 800w, ../images/City-Council-Attendance-Responsive-Design-p-1600.jpeg 1600w, ../images/City-Council-Attendance-Responsive-Design-p-2000.jpeg 2000w, ../images/City-Council-Attendance-Responsive-Design-p-2600.jpeg 2600w, ../images/City-Council-Attendance-Responsive-Design.jpg 2800w" alt="A mockup of the goals details template that includes all of its initiatives, actions and resources" class="image-2">
+        <a href="https://dallascityhall.com/government/citycouncil/Pages/council-attendance.aspx" target="_blank" class="project-button w-button">View the City Council Attendance Website</a>
       </div>
     </div>
     <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
