--- a/work/dallas-365-landing-page-design.html
+++ b/work/dallas-365-landing-page-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 08 2022 20:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Feb 08 2022 20:26:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6202bbd15617b2759e3cf70c" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -42,8 +42,8 @@
         <h4>UI Design</h4>
         <p>Redesign the landing page for the Dallas 365 dashboard. The landing page is an overall performance measure by strategic priority. The Dallas 365 detailed dashboard tracks the progress on 35 performance measures aligned to the City’s eight strategic priorities. This landing page help users discover Dallas’ story with monthly data updates.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD, Illustrator &amp; Photoshop<br><strong>Year:</strong> 2021<br></p>
       </div>
-      <div class="resources-div"><img src="../images/Dallas365-Landing-Page---Desktop---v2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Dallas365-Landing-Page---Desktop---v2.jpg 500w, ../images/Dallas365-Landing-Page---Desktop---v2.jpg 800w, ../images/Dallas365-Landing-Page---Desktop---v2.jpg 1080w, ../images/Dallas365-Landing-Page---Desktop---v2.jpg 1440w" alt="A mockup of the goals page which lists each goal with a status and quick description" class="image-2">
-        <a href="#" class="project-button w-button">View the Dallas 365 Landing Page</a>
+      <div class="resources-div"><img src="../images/Dallas365-Landing-Page---Desktop---v2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Dallas365-Landing-Page---Desktop---v2-p-500.jpeg 500w, ../images/Dallas365-Landing-Page---Desktop---v2-p-800.jpeg 800w, ../images/Dallas365-Landing-Page---Desktop---v2-p-1080.jpeg 1080w, ../images/Dallas365-Landing-Page---Desktop---v2.jpg 1440w" alt="A mockup of the goals page which lists each goal with a status and quick description" class="image-2">
+        <a href="https://dallascityhall.com/departments/budget/financialtransparency/Pages/dallas365.aspx" target="_blank" class="project-button w-button">View the Dallas 365 Landing Page</a>
       </div>
     </div>
     <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
