--- a/work/dallas-city-hall-menu-redesign.html
+++ b/work/dallas-city-hall-menu-redesign.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 08 2022 20:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Wed Jul 19 2023 17:51:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61a8fe808eb9151a5dd9a566" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -11,9 +11,10 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/vanessa-salinas-portfolio.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Dela Gothic One:regular"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
@@ -55,7 +56,7 @@
         <a href="../documents/DCH-Redesign-FindingsReport-HeroMenuSession-LR.pdf" target="_blank" class="file-link w-inline-block">
           <h5>Redesign Findings Report</h5><img src="../images/DCH-Redesign-Findings-Report-Hero-Menu.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, (max-width: 2395px) 81vw, 1940px" srcset="../images/DCH-Redesign-Findings-Report-Hero-Menu-p-500.png 500w, ../images/DCH-Redesign-Findings-Report-Hero-Menu-p-800.png 800w, ../images/DCH-Redesign-Findings-Report-Hero-Menu-p-1080.png 1080w, ../images/DCH-Redesign-Findings-Report-Hero-Menu-p-1600.png 1600w, ../images/DCH-Redesign-Findings-Report-Hero-Menu.png 1940w" alt="PUD Website Outline of Information Architecture" class="image-2">
         </a>
-        <h5>Final Menu Redesign</h5><img src="../images/DCH-Nav-Dropdown-onClick.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/DCH-Nav-Dropdown-onClick.jpg 1080w, ../images/DCH-Nav-Dropdown-onClick.jpg 1440w" alt="PUD Website Outline of Information Architecture" class="image-2">
+        <h5>Final Menu Redesign</h5><img src="../images/DCH-Nav-Dropdown-onClick.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/DCH-Nav-Dropdown-onClick-p-1080.jpeg 1080w, ../images/DCH-Nav-Dropdown-onClick.jpg 1440w" alt="PUD Website Outline of Information Architecture" class="image-2">
       </div>
     </div>
     <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
@@ -64,11 +65,10 @@
   </div>
   <div id="Footer" class="footer wf-section">
     <div class="footer-div">
-      <p class="copyright">© Copyright 2022 Vanessa Salinas - All Rights Reserved</p>
+      <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
