--- a/work/planning-and-urban-design-website.html
+++ b/work/planning-and-urban-design-website.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 08 2022 20:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Wed Jul 19 2023 17:51:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a57cdc01f0f751ac5877b" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -11,9 +11,10 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/vanessa-salinas-portfolio.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Dela Gothic One:regular"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
@@ -43,23 +44,22 @@
         <p>Worked closely with the PUD department stakeholders, product manager, UX designers and front end developers to create visuals based on sketches and requirements from the department.<br><strong><br>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD, Illustrator &amp; Photoshop<br><strong>Year:</strong> 2020<br><br><strong>Challenges:</strong> Working with a department who had their own ideas and mockups of what they wanted their website to look like but with no website standards used. Tasked with bringing these ideas under the City of Dallas style guide standards. Including fonts, colors, components and compliant with web accessibility.<br><br><strong>Project Outcome:</strong> Through close collaboration and an extensive iterative process the department was very satisfied with the final product and expressed that it met their overall purpose of a creative, dynamic and focused online presence to expand the reach of the department’s message, publications, support efforts in educating, informing and encouraging involvement in planning for the city’s future.</p>
       </div>
       <div class="resources-div">
-        <h5>IA/User Flow</h5><img src="../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png 2498w" alt="PUD Website Outline of Information Architecture" class="image-2">
-        <h5>Client&#x27;s Website Ideas/Mockups</h5><img src="../images/PUD-Themes-Layout-from-Client.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/PUD-Themes-Layout-from-Client.png 500w, ../images/PUD-Themes-Layout-from-Client.png 1600w, ../images/PUD-Themes-Layout-from-Client.png 2000w, ../images/PUD-Themes-Layout-from-Client.png 2600w, ../images/PUD-Themes-Layout-from-Client.png 3200w, ../images/PUD-Themes-Layout-from-Client.png 3584w" alt="A view of the clients ideas and mockup of website pages" class="image-2">
-        <h5>UI / Iterative Component Variations</h5><img src="../images/PUD-Iterative-Component-Process---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/PUD-Iterative-Component-Process---Desktop.jpg 500w, ../images/PUD-Iterative-Component-Process---Desktop.jpg 800w, ../images/PUD-Iterative-Component-Process---Desktop.jpg 1080w, ../images/PUD-Iterative-Component-Process---Desktop.jpg 1440w" alt="Various UI Mockups for different pages of the site" class="image-2">
-        <h5>Final UI Mockup for the Urban Design Page</h5><img src="../images/PUD-Urban-Design-.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/PUD-Urban-Design-.jpg 500w, ../images/PUD-Urban-Design-.jpg 800w, ../images/PUD-Urban-Design-.jpg 1080w, ../images/PUD-Urban-Design-.jpg 1440w" alt="Final mockups of the homepage and about page" class="image-2">
+        <h5>IA/User Flow</h5><img src="../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png" loading="lazy" srcset="../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png 2498w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" alt="PUD Website Outline of Information Architecture" class="image-2">
+        <h5>Client&#x27;s Website Ideas/Mockups</h5><img src="../images/PUD-Themes-Layout-from-Client.png" loading="lazy" srcset="../images/PUD-Themes-Layout-from-Client-p-500.png 500w, ../images/PUD-Themes-Layout-from-Client-p-1600.png 1600w, ../images/PUD-Themes-Layout-from-Client-p-2000.png 2000w, ../images/PUD-Themes-Layout-from-Client-p-2600.png 2600w, ../images/PUD-Themes-Layout-from-Client-p-3200.png 3200w, ../images/PUD-Themes-Layout-from-Client.png 3584w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" alt="A view of the clients ideas and mockup of website pages" class="image-2">
+        <h5>UI / Iterative Component Variations</h5><img src="../images/PUD-Iterative-Component-Process---Desktop.jpg" loading="lazy" srcset="../images/PUD-Iterative-Component-Process---Desktop-p-500.jpeg 500w, ../images/PUD-Iterative-Component-Process---Desktop-p-800.jpeg 800w, ../images/PUD-Iterative-Component-Process---Desktop-p-1080.jpeg 1080w, ../images/PUD-Iterative-Component-Process---Desktop.jpg 1440w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" alt="Various UI Mockups for different pages of the site" class="image-2">
+        <h5>Final UI Mockup for the Urban Design Page</h5><img src="../images/PUD-Urban-Design-.jpg" loading="lazy" srcset="../images/PUD-Urban-Design--p-500.jpeg 500w, ../images/PUD-Urban-Design--p-800.jpeg 800w, ../images/PUD-Urban-Design--p-1080.jpeg 1080w, ../images/PUD-Urban-Design-.jpg 1440w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" alt="Final mockups of the homepage and about page" class="image-2">
       </div>
     </div>
-    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" sizes="24px" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" alt="Left Arrow Icon">
       <div class="text-block">Back</div>
     </a>
   </div>
   <div id="Footer" class="footer wf-section">
     <div class="footer-div">
-      <p class="copyright">© Copyright 2022 Vanessa Salinas - All Rights Reserved</p>
+      <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
