--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 19 2023 17:51:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 19 2023 18:12:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -45,7 +45,7 @@
   <div class="header wf-section">
     <div class="hero">
       <div class="hero-content">
-        <h1 class="hero-heading-one">Understand. Create. Deliver.</h1>
+        <h1 class="hero-heading-one">Understand.<br>Create. Deliver.</h1>
         <h2 class="hero-heading-two">Design Solutions</h2>
         <a href="#vwork" class="button w-button">View Portfolio</a>
       </div>
@@ -55,13 +55,13 @@
     <div class="intro-div">
       <div class="about-div">
         <h3 class="heading-four">Hello World!</h3>
-        <p class="paragraph">I’m a UX/UI Designer with a focus in visual design and front end development</p>
+        <p class="subtitle">I’m a UX/UI Designer with a focus in visual design and front end development</p>
         <p class="intro-paragraph">I have over 15 years of combined experience in graphic design, web design and front end development. I strive to strengthen user experiences through my skills in UX research, collaboration, problem solving, wire framing and UI prototyping. I have a great interest in accepting feedback and using it to build better experiences for users.</p>
       </div>
       <div class="icon-div">
         <div class="w-layout-grid grid">
           <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
-            <div class="icon-card-content-parent">
+            <div class="icon-card-content-parent w-clearfix">
               <div class="icon-image"><img src="images/Design-Icon.svg" loading="lazy" alt="" class="image"></div>
               <div class="icon-card-content">
                 <p class="icon-title">Research &amp; Design</p>
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div id="w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657" class="icon-card">
-            <div class="icon-card-content-parent">
+            <div class="icon-card-content-parent w-clearfix">
               <div class="icon-image"><img src="images/Prototyping-Icon.svg" loading="lazy" alt="" class="image"></div>
               <div class="icon-card-content">
                 <p class="icon-title">Prototyping</p>
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div id="w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657" class="icon-card">
-            <div class="icon-card-content-parent">
+            <div class="icon-card-content-parent w-clearfix">
               <div class="icon-image"><img src="images/Code-Icon.svg" loading="lazy" alt="" class="image"></div>
               <div class="icon-card-content">
                 <p class="icon-title">Web Development</p>
