--- a/work/la-creme-box-art-design.html
+++ b/work/la-creme-box-art-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 19 2023 17:51:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 19 2023 18:12:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6e5443771a20df556ab2" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
