--- a/work/city-council-attendance-website-design.html
+++ b/work/city-council-attendance-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 19 2023 18:12:21 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 19 2023 23:12:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6202b00806ae5bc0581a2986" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+  <div data-collapse="medium" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="div-block-3">
       <a href="../index.html" class="brand w-nav-brand">
         <h5 class="logo-heading">Vanessa Salinas</h5>
@@ -54,6 +54,7 @@
   <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
